--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,17 @@ Package: pfgsea
 Title: Parameterized Fast GSEA
 Description: Perform parameterized gene set enrichment analysis on multiple
     differential expression contrasts.
-Version: 0.0.1
-Date: 2018-11-07
+Version: 0.0.2
+Date: 2018-11-26
 Authors@R: person(
     "Michael", "Steinbaugh",
     email = "mike@steinbaugh.com",
     role = c("aut", "cre"),
     comment = c(ORCID = "0000-0002-2403-2221"))
-URL: https://github.com/steinbaugh/pfgsea
-BugReports: https://github.com/steinbaugh/pfgsea/issues
+URL:
+    https://steinbaugh.com/pfgsea/,
+    https://github.com/steinbaugh/pfgsea/
+BugReports: https://github.com/steinbaugh/pfgsea/issues/
 License: MIT + file LICENSE
 Encoding: UTF-8
 Depends:
@@ -21,7 +23,7 @@ Imports:
     assertive.files,
     assertive.properties,
     assertive.types,
-    basejump,
+    basejump (>= 0.8.3),
     dplyr,
     ggplot2,
     knitr,
@@ -29,7 +31,10 @@ Imports:
     rlang,
     tibble,
     utils
-Suggests: rmarkdown
+Suggests:
+    rmarkdown
+Remotes:
+    steinbaugh/basejump@develop
 biocViews: Infrastructure
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
