--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Description:
     Perform parameterized gene set enrichment analysis on multiple differential
     expression contrasts.
 Version: 0.0.2
-Date: 2018-11-30
+Date: 2018-12-13
 Authors@R:
     person(
         "Michael", "Steinbaugh",
@@ -20,32 +20,30 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Depends: R (>= 3.5)
 Imports:
-    DOSE,
-    GSEABase,
-    assertive.base,
-    assertive.files,
-    assertive.properties,
-    assertive.types,
     basejump (>= 0.8.5),
-    clusterProfiler (>= 3.10),
     dplyr,
-    enrichplot,
-    fgsea (>= 1.8)
+    fgsea (>= 1.8),
     ggplot2,
+    goalie (>= 0.2),
     knitr,
-    liger,
     magrittr,
     rlang,
-    tibble,
     utils
 Suggests:
     BiocStyle,
+    DOSE,
+    GSEABase,
+    clusterProfiler (>= 3.10),
+    enrichplot,
+    liger,
     patrick,
     rmarkdown,
     testthat (>= 2.0)
 Remotes:
     JEFworks/liger,
-    steinbaugh/basejump@develop
-biocViews: Infrastructure
+    steinbaugh/basejump@develop,
+    steinbaugh/goalie@develop
+biocViews:
+    GeneSetEnrichment
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
