--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,17 +8,7 @@ export(plotGSEATable)
 export(plotGSEATables)
 export(topTable)
 export(topTables)
-importFrom(assertive.base,assert_are_identical)
-importFrom(assertive.files,assert_all_are_existing_files)
-importFrom(assertive.properties,assert_has_names)
-importFrom(assertive.types,assert_is_a_number)
-importFrom(assertive.types,assert_is_a_string)
-importFrom(assertive.types,assert_is_character)
-importFrom(assertive.types,assert_is_data.frame)
-importFrom(assertive.types,assert_is_list)
-importFrom(assertive.types,assert_is_numeric)
-importFrom(basejump,assertIsAlpha)
-importFrom(basejump,assertIsHeaderLevel)
+importFrom(basejump,as_tibble)
 importFrom(basejump,markdownHeader)
 importFrom(basejump,theme_paperwhite)
 importFrom(dplyr,arrange)
@@ -30,12 +20,17 @@ importFrom(fgsea,gmtPathways)
 importFrom(fgsea,plotEnrichment)
 importFrom(fgsea,plotGseaTable)
 importFrom(ggplot2,labs)
+importFrom(goalie,assert)
+importFrom(goalie,containsAlpha)
+importFrom(goalie,containsHeaderLevel)
+importFrom(goalie,hasNames)
+importFrom(goalie,isAFile)
+importFrom(goalie,isFile)
 importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
 importFrom(rlang,sym)
 importFrom(rlang,syms)
-importFrom(tibble,as_tibble)
 importFrom(utils,head)
 importFrom(utils,tail)
