--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,9 @@ importFrom(goalie,containsAlpha)
 importFrom(goalie,containsHeaderLevel)
 importFrom(goalie,hasNames)
 importFrom(goalie,isAFile)
+importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
+importFrom(goalie,isInt)
 importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!!")
