--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,14 +20,15 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Depends: R (>= 3.5)
 Imports:
+    DESeqAnalysis (>= 0.1.4),
     basejump (>= 0.9),
-    dplyr,
+    dplyr (>= 0.7.8),
     fgsea (>= 1.8),
-    ggplot2,
+    ggplot2 (>= 3.1.0),
     goalie (>= 0.2),
-    knitr,
-    magrittr,
-    rlang,
+    knitr (>= 1.21),
+    magrittr (>= 1.5),
+    rlang (>= 0.3),
     utils
 Suggests:
     BiocStyle,
@@ -35,6 +36,7 @@ Suggests:
     rmarkdown,
     testthat (>= 2.0)
 Remotes:
+    steinbaugh/DESeqAnalysis@develop,
     steinbaugh/basejump@develop,
     steinbaugh/goalie@develop
 biocViews:
