Export `statsList()` function, that generates the stat lists

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,15 +6,22 @@ export(plotEnrichment)
 export(plotEnrichments)
 export(plotGSEATable)
 export(plotGSEATables)
+export(statsList)
 export(topTable)
 export(topTables)
+exportMethods(statsList)
+importFrom(basejump,Gene2Symbol)
 importFrom(basejump,as_tibble)
 importFrom(basejump,markdownHeader)
 importFrom(basejump,theme_paperwhite)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,select)
+importFrom(dplyr,summarize)
 importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
 importFrom(fgsea,plotEnrichment)
@@ -32,7 +39,10 @@ importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
+importFrom(rlang,":=")
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(tibble,deframe)
 importFrom(utils,head)
 importFrom(utils,tail)
+importMethodsFrom(DESeqAnalysis,coerce)
