--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ exportMethods(statsList)
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,as_tibble)
 importFrom(basejump,markdownHeader)
+importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,theme_paperwhite)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
@@ -37,11 +38,17 @@ importFrom(goalie,isFile)
 importFrom(goalie,isInt)
 importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
+importFrom(methods,as)
+importFrom(methods,is)
+importFrom(methods,setGeneric)
+importFrom(methods,setMethod)
+importFrom(methods,validObject)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(stats,na.omit)
 importFrom(tibble,deframe)
 importFrom(utils,head)
 importFrom(utils,tail)
