--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Encoding: UTF-8
 Depends: R (>= 3.5)
 Imports:
     DESeqAnalysis (>= 0.1.7), basejump (>= 0.9.7), goalie (>= 0.2.6),
-        fgsea (>= 1.8),
+    S4Vectors, fgsea (>= 1.8),
     dplyr (>= 0.7), ggplot2 (>= 3.1), knitr (>= 1.21), magrittr (>= 1.5),
         rlang (>= 0.3), tibble (>= 2.0),
     methods, stats, utils
