--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,10 @@ export(plotGSEATables)
 export(statsList)
 export(topTable)
 export(topTables)
+exportClasses(FGSEAList)
+exportMethods(coerce)
 exportMethods(statsList)
+importFrom(S4Vectors,SimpleList)
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,as_tibble)
 importFrom(basejump,markdownHeader)
@@ -36,10 +39,13 @@ importFrom(goalie,isAFile)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
 importFrom(goalie,isInt)
+importFrom(goalie,validate)
 importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
 importFrom(methods,as)
+importFrom(methods,coerce)
 importFrom(methods,is)
+importFrom(methods,setAs)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
 importFrom(methods,validObject)
