Deprecate `statsList()` in favor of `rankedList()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(plotEnrichments)
 export(plotGSEATable)
 export(plotGSEATables)
 export(rankedList)
+export(statsList)
 export(topTable)
 export(topTables)
 exportClasses(FGSEAList)
