Improve `RankedList` S4 class object generation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,9 @@ exportClasses(FGSEAList)
 exportClasses(RankedList)
 exportMethods(coerce)
 exportMethods(rankedList)
+importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,SimpleList)
+importFrom(S4Vectors,metadata)
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,as_tibble)
 importFrom(basejump,markdownHeader)
@@ -43,6 +45,7 @@ importFrom(goalie,isAFile)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
 importFrom(goalie,isInt)
+importFrom(goalie,isSubset)
 importFrom(goalie,validate)
 importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
