--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(methods,coerce)
 importFrom(methods,is)
+importFrom(methods,new)
 importFrom(methods,setAs)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
