--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,11 +18,13 @@ URL:
 BugReports: https://github.com/steinbaugh/pfgsea/issues/
 License: MIT + file LICENSE
 Encoding: UTF-8
-Depends: R (>= 3.5)
+Depends:
+    R (>= 3.5),
+    basejump (>= 0.9.7),
+    DESeqAnalysis (>= 0.1.7)
 Imports:
-    DESeqAnalysis (>= 0.1.7), basejump (>= 0.9.7), bioverbs (>= 0.1.5),
-        goalie (>= 0.2.6),
-    S4Vectors, fgsea (>= 1.8),
+    bioverbs (>= 0.1.5), goalie (>= 0.2.6),
+    BiocParallel, S4Vectors, fgsea (>= 1.8),
     dplyr (>= 0.7), ggplot2 (>= 3.1), knitr (>= 1.21), magrittr (>= 1.5),
         rlang (>= 0.3), tibble (>= 2.0),
     methods, stats, utils
