Add `export()` method support for FGSEAList

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(topTables)
 exportClasses(FGSEAList)
 exportClasses(RankedList)
 exportMethods(coerce)
+exportMethods(export)
 exportMethods(rankedList)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,SimpleList)
