--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,18 +4,17 @@ export()
 export(export)
 export(pfgsea)
 export(plotEnrichment)
-export(plotEnrichments)
 export(plotGSEATable)
-export(plotGSEATables)
 export(rankedList)
 export(statsList)
-export(topTable)
 export(topTables)
 exportClasses(FGSEAList)
 exportClasses(RankedList)
 exportMethods(coerce)
 exportMethods(export)
+exportMethods(plotEnrichment)
 exportMethods(rankedList)
+exportMethods(topTables)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,SimpleList)
 importFrom(S4Vectors,lapply)
@@ -30,6 +29,7 @@ importFrom(basejump,standardizeCall)
 importFrom(basejump,theme_paperwhite)
 importFrom(bioverbs,export)
 importFrom(bioverbs,rankedList)
+importFrom(bioverbs,topTables)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
@@ -40,16 +40,16 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
-importFrom(fgsea,plotEnrichment)
 importFrom(fgsea,plotGseaTable)
 importFrom(ggplot2,labs)
 importFrom(goalie,assert)
-importFrom(goalie,containsAlpha)
-importFrom(goalie,containsHeaderLevel)
+importFrom(goalie,hasLength)
 importFrom(goalie,hasNames)
 importFrom(goalie,isAFile)
+importFrom(goalie,isAlpha)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
+importFrom(goalie,isHeaderLevel)
 importFrom(goalie,isInt)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
