--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,11 +33,12 @@ importFrom(bioverbs,topTables)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,select)
-importFrom(dplyr,summarize)
+importFrom(dplyr,summarise)
 importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
 importFrom(fgsea,plotGseaTable)
