--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ exportClasses(RankedList)
 exportMethods(coerce)
 exportMethods(export)
 exportMethods(plotEnrichment)
+exportMethods(plotGSEATable)
 exportMethods(rankedList)
 exportMethods(topTables)
 importFrom(S4Vectors,"metadata<-")
