--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export()
 export(export)
 export(pfgsea)
 export(plotEnrichment)
+export(plotEnrichments)
 export(plotGSEATable)
+export(plotGSEATables)
 export(rankedList)
 export(statsList)
 export(topTables)
