--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(ggplot2,labs)
 importFrom(goalie,assert)
 importFrom(goalie,hasLength)
 importFrom(goalie,hasNames)
+importFrom(goalie,hasRows)
 importFrom(goalie,isAFile)
 importFrom(goalie,isAlpha)
 importFrom(goalie,isCharacter)
