--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
+importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(fgsea,fgsea)
@@ -51,6 +52,7 @@ importFrom(goalie,hasLength)
 importFrom(goalie,hasNames)
 importFrom(goalie,hasRows)
 importFrom(goalie,isAFile)
+importFrom(goalie,isAll)
 importFrom(goalie,isAlpha)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
