--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(dplyr,select_if)
 importFrom(dplyr,summarise)
 importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
@@ -78,6 +79,7 @@ importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(stats,na.omit)
 importFrom(tibble,deframe)
+importFrom(utils,globalVariables)
 importFrom(utils,head)
 importFrom(utils,tail)
 importMethodsFrom(DESeqAnalysis,coerce)
