Stick with the convention of using `RankedList()` to generate a RankedList S4.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Depends:
     basejump (>= 0.9.7),
     DESeqAnalysis (>= 0.1.7)
 Imports:
-    bioverbs (>= 0.1.5), goalie (>= 0.2.6),
+    goalie (>= 0.2.6),
     BiocParallel, S4Vectors, fgsea (>= 1.8),
     dplyr (>= 0.7), ggplot2 (>= 3.1), knitr (>= 1.21), magrittr (>= 1.5),
         rlang (>= 0.3), tibble (>= 2.0),
@@ -34,7 +34,6 @@ Suggests:
 Remotes:
     steinbaugh/DESeqAnalysis,
     steinbaugh/basejump,
-    steinbaugh/bioverbs,
     steinbaugh/goalie
 biocViews:
     GeneSetEnrichment,
