--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,6 @@ importFrom(basejump,initDir)
 importFrom(basejump,markdownHeader)
 importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,standardizeCall)
-importFrom(basejump,theme_paperwhite)
 importFrom(bioverbs,export)
 importFrom(bioverbs,topTables)
 importFrom(dplyr,arrange)
@@ -70,6 +69,7 @@ importFrom(methods,setAs)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
 importFrom(methods,validObject)
+importFrom(minimalism,theme_paperwhite)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
