--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Title: Parameterized Fast GSEA
 Description:
     Perform parameterized gene set enrichment analysis on multiple differential
     expression contrasts.
-Version: 0.1.0
-Date: 2019-03-23
+Version: 0.1.1
+Date: 2019-04-01
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -24,10 +24,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Depends:
     R (>= 3.5),
-    basejump (>= 0.9.16),
-    DESeqAnalysis (>= 0.1.13)
+    basejump (>= 0.10),
+    DESeqAnalysis (>= 0.1.14)
 Imports:
-    bioverbs (>= 0.1.10), goalie (>= 0.2.12),
+    bioverbs (>= 0.1.10), goalie (>= 0.2.12), minimalism (>= 0.1),
     BiocParallel, S4Vectors, fgsea (>= 1.8),
     dplyr (>= 0.8), ggplot2 (>= 3.1), knitr (>= 1.22), magrittr (>= 1.5),
         rlang (>= 0.3), tibble (>= 2.1),
@@ -39,7 +39,8 @@ Remotes:
     acidgenomics/DESeqAnalysis,
     acidgenomics/basejump,
     acidgenomics/bioverbs,
-    acidgenomics/goalie
+    acidgenomics/goalie,
+    acidgenomics/minimalism
 biocViews:
     GeneSetEnrichment,
     Visualization
