--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ URL:
 BugReports: https://github.com/acidgenomics/pfgsea/issues/
 License: MIT + file LICENSE
 Encoding: UTF-8
+LazyData: false
 Depends:
     R (>= 3.5),
     basejump (>= 0.10),
