--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,7 @@ Imports:
     methods, stats, utils
 Suggests:
     BiocStyle,
-    patrick, rmarkdown, testthat
+    rmarkdown, testthat
 Remotes:
     acidgenomics/DESeqAnalysis,
     acidgenomics/basejump,
