--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,15 +1,9 @@
-^.*\.Rproj$
-^\.Rproj\.user$
-^\.git$
-^\.lintr$
-^\.travis\.yml$
-^_pkgdown\.yml$
-^appveyor\.yml$
-^copy-msigdb-files\.R$
+^\..*$
+^.*\.R$
+^.*\.pdf$
+^.*\.yml$
+^Meta$
 ^data-raw$
+^doc$
 ^docs$
 ^pkgdown$
-^Rplots\.pdf$
-^travis-docker\.R$
-^doc$
-^Meta$
