--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,10 +1,12 @@
-^\..*$
-^.*\.R$
-^.*\.pdf$
-^.*\.sh$
-^.*\.yml$
-^Meta$
+^.*\.Rproj$
+^\.Rproj\.user$
+^\.git$
+^\.lintr$
+^\.travis\.yml$
+^_pkgdown\.yml$
+^appveyor\.yml$
 ^data-raw$
-^doc$
 ^docs$
 ^pkgdown$
+^Rplots\.pdf$
+^travis-docker\.sh$
