--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,7 @@ Depends:
     basejump (>= 0.10.3),
     DESeqAnalysis (>= 0.1.16)
 Imports:
-    bioverbs (>= 0.1.12), goalie (>= 0.2.14), minimalism (>= 0.1.1),
+    acidplots (>= 0.2.0), bioverbs (>= 0.1.12), goalie (>= 0.2.14),
     BiocParallel, S4Vectors, fgsea (>= 1.8),
     dplyr (>= 0.8), ggplot2 (>= 3.1), knitr (>= 1.22), magrittr (>= 1.5),
         rlang (>= 0.3), tibble (>= 2.1),
@@ -37,11 +37,11 @@ Suggests:
     BiocStyle,
     rmarkdown, testthat
 Remotes:
+    acidgenomics/acidplots,
     acidgenomics/DESeqAnalysis,
     acidgenomics/basejump,
     acidgenomics/bioverbs,
-    acidgenomics/goalie,
-    acidgenomics/minimalism
+    acidgenomics/goalie
 biocViews:
     GeneSetEnrichment,
     Visualization
