Initial support for `enriched()` and `plotEnrichedUpset()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 export(RankedList)
 export(acid_theme_light)
 export(bpparam)
+export(enriched)
 export(export)
 export(pfgsea)
+export(plotEnrichedUpset)
 export(plotEnrichment)
 export(plotEnrichments)
 export(plotGSEATable)
@@ -14,7 +16,9 @@ export(topTables)
 exportClasses(FGSEAList)
 exportClasses(RankedList)
 exportMethods(RankedList)
+exportMethods(enriched)
 exportMethods(export)
+exportMethods(plotEnrichedUpset)
 exportMethods(plotEnrichment)
 exportMethods(plotGSEATable)
 exportMethods(topTables)
@@ -23,7 +27,9 @@ importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,SimpleList)
 importFrom(S4Vectors,lapply)
 importFrom(S4Vectors,metadata)
+importFrom(UpSetR,fromList)
 importFrom(acidplots,acid_theme_light)
+importFrom(acidplots,upset)
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,as_tibble)
 importFrom(basejump,export)
