--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,7 @@ Depends:
     DESeqAnalysis (>= 0.1.16)
 Imports:
     acidplots (>= 0.2.0), bioverbs (>= 0.1.12), goalie (>= 0.2.14),
-    BiocParallel, S4Vectors, fgsea (>= 1.8),
+    BiocGenerics, BiocParallel, S4Vectors, fgsea (>= 1.8),
     UpSetR (>= 1.3), dplyr (>= 0.8), ggplot2 (>= 3.1), knitr (>= 1.22),
         magrittr (>= 1.5), rlang (>= 0.3), tibble (>= 2.1),
     methods, stats, utils
