Update NAMESPACE and remove FIXME comments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ exportClasses(RankedList)
 exportMethods("contrastNames<-")
 exportMethods("pathwayNames<-")
 exportMethods(RankedList)
+exportMethods(combine)
 exportMethods(contrastNames)
 exportMethods(enriched)
 exportMethods(export)
@@ -65,6 +66,7 @@ importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
 importFrom(fgsea,plotGseaTable)
 importFrom(ggplot2,labs)
+importFrom(goalie,areDisjointSets)
 importFrom(goalie,areSameLength)
 importFrom(goalie,assert)
 importFrom(goalie,hasLength)
