Need to import `show()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ importFrom(methods,new)
 importFrom(methods,setAs)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
+importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
 importFrom(rlang,"!!!")
