--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ importFrom(goalie,isAll)
 importFrom(goalie,isAlpha)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
+importFrom(goalie,isFlag)
 importFrom(goalie,isHeaderLevel)
 importFrom(goalie,isInt)
 importFrom(goalie,isString)
