Update NAMESPACE to support RankedList from matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,8 +72,10 @@ importFrom(ggplot2,labs)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,areSameLength)
 importFrom(goalie,assert)
+importFrom(goalie,hasColnames)
 importFrom(goalie,hasLength)
 importFrom(goalie,hasNames)
+importFrom(goalie,hasRownames)
 importFrom(goalie,hasRows)
 importFrom(goalie,isAFile)
 importFrom(goalie,isAll)
