Migrate generics to bioverbs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,10 @@ export(bpparam)
 export(collectionNames)
 export(combine)
 export(contrastNames)
-export(enriched)
+export(enrichedGeneSets)
 export(export)
 export(pfgsea)
+export(plotEnrichedGeneSets)
 export(plotEnrichedUpset)
 export(plotEnrichment)
 export(plotEnrichments)
@@ -26,10 +27,10 @@ exportMethods(RankedList)
 exportMethods(collectionNames)
 exportMethods(combine)
 exportMethods(contrastNames)
-exportMethods(enriched)
+exportMethods(enrichedGeneSets)
 exportMethods(export)
+exportMethods(plotEnrichedGeneSets)
 exportMethods(plotEnrichedUpset)
-exportMethods(plotEnrichment)
 exportMethods(plotGSEATable)
 exportMethods(show)
 exportMethods(topTables)
@@ -52,7 +53,15 @@ importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,showHeader)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,standardizeCall)
+importFrom(bioverbs,"collectionNames<-")
+importFrom(bioverbs,"contrastNames<-")
+importFrom(bioverbs,collectionNames)
+importFrom(bioverbs,contrastNames)
+importFrom(bioverbs,enrichedGeneSets)
 importFrom(bioverbs,export)
+importFrom(bioverbs,plotEnrichedGeneSets)
+importFrom(bioverbs,plotEnrichedUpset)
+importFrom(bioverbs,plotGSEATable)
 importFrom(bioverbs,topTables)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
