--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Imports:
     acidplots (>= 0.2.2), bioverbs (>= 0.1.15), goalie (>= 0.2.15),
     BiocGenerics, BiocParallel, S4Vectors, fgsea (>= 1.8),
     UpSetR (>= 1.3), dplyr (>= 0.8), ggplot2 (>= 3.1), knitr (>= 1.22),
-        magrittr (>= 1.5), rlang (>= 0.3), tibble (>= 2.1),
+        magrittr (>= 1.5), rlang (>= 0.3), sessioninfo (>= 1.1),
+        tibble (>= 2.1),
     methods, stats, utils
 Suggests:
     BiocStyle, rmarkdown, testthat
