--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ importFrom(dplyr,select_if)
 importFrom(dplyr,summarise)
 importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
+importFrom(fgsea,plotEnrichment)
 importFrom(fgsea,plotGseaTable)
 importFrom(ggplot2,labs)
 importFrom(goalie,areDisjointSets)
@@ -114,6 +115,7 @@ importFrom(rlang,"!!")
 importFrom(rlang,":=")
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(sessioninfo,session_info)
 importFrom(stats,na.omit)
 importFrom(tibble,deframe)
 importFrom(utils,globalVariables)
