Switch to using stashed alpha value

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ importFrom(goalie,isFile)
 importFrom(goalie,isFlag)
 importFrom(goalie,isHeaderLevel)
 importFrom(goalie,isInt)
+importFrom(goalie,isScalar)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(goalie,validate)
