--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ importFrom(UpSetR,fromList)
 importFrom(acidplots,acid_theme_light)
 importFrom(acidplots,upset)
 importFrom(basejump,Gene2Symbol)
+importFrom(basejump,alphaThreshold)
 importFrom(basejump,as_tibble)
 importFrom(basejump,export)
 importFrom(basejump,initDir)
