--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ importFrom(ggplot2,labs)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,areSameLength)
 importFrom(goalie,assert)
+importFrom(goalie,bapply)
 importFrom(goalie,hasColnames)
 importFrom(goalie,hasLength)
 importFrom(goalie,hasNames)
