Improve CI config

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,9 @@ Imports:
         tibble (>= 2.1),
     methods, stats, utils
 Suggests:
-    BiocStyle, rmarkdown, testthat
+    BiocStyle,
+    rmarkdown,
+    testthat
 Remotes:
     acidgenomics/acidplots,
     acidgenomics/DESeqAnalysis,
