--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ branches:
 
 before_script:
   - chmod +x *.sh
+    # Avoid BiocCheck > checkCodingPractice > checkLogicalUseFiles error.
+  - touch inst/rmarkdown/templates/pfgsea/skeleton/_{footer,header,links}.Rmd
 
 jobs:
   include:
