--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,12 +28,24 @@ Depends:
     basejump (>= 0.10.8),
     DESeqAnalysis (>= 0.1.22)
 Imports:
-    acidplots (>= 0.2.3), bioverbs (>= 0.1.18), goalie (>= 0.2.16),
-    BiocGenerics, BiocParallel, S4Vectors, fgsea (>= 1.8),
-    UpSetR (>= 1.3), dplyr (>= 0.8), ggplot2 (>= 3.1), knitr (>= 1.22),
-        magrittr (>= 1.5), rlang (>= 0.3), sessioninfo (>= 1.1),
-        tibble (>= 2.1),
-    methods, stats, utils
+    acidplots (>= 0.2.3),
+    bioverbs (>= 0.1.18),
+    goalie (>= 0.2.16),
+    BiocGenerics,
+    BiocParallel,
+    S4Vectors,
+    fgsea,
+    UpSetR (>= 1.3),
+    dplyr (>= 0.8),
+    ggplot2 (>= 3.1),
+    knitr (>= 1.22),
+    magrittr (>= 1.5),
+    rlang (>= 0.3),
+    sessioninfo (>= 1.1),
+    tibble (>= 2.1),
+    methods,
+    stats,
+    utils
 Suggests:
     BiocStyle,
     rmarkdown,
