--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(bpparam)
 export(collectionNames)
 export(combine)
 export(contrastNames)
+export(convertToHuman)
 export(enrichedGeneSets)
 export(export)
 export(pfgsea)
@@ -34,6 +35,7 @@ exportMethods(plotEnrichedUpset)
 exportMethods(plotGSEATable)
 exportMethods(show)
 exportMethods(topTables)
+importClassesFrom(DESeqAnalysis,DESeqAnalysis)
 importFrom(BiocGenerics,combine)
 importFrom(BiocParallel,bpparam)
 importFrom(S4Vectors,"metadata<-")
@@ -98,6 +100,7 @@ importFrom(goalie,isFlag)
 importFrom(goalie,isHeaderLevel)
 importFrom(goalie,isInt)
 importFrom(goalie,isScalar)
+importFrom(goalie,isScalarInteger)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(goalie,validate)
