--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ exportMethods(RankedList)
 exportMethods(collectionNames)
 exportMethods(combine)
 exportMethods(contrastNames)
+exportMethods(convertToHuman)
 exportMethods(enrichedGeneSets)
 exportMethods(export)
 exportMethods(plotEnrichedGeneSets)
