Improve code coverage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(convertToHuman)
 export(enrichedGeneSets)
 export(export)
 export(pfgsea)
+export(pfgseaTestsURL)
 export(plotEnrichedGeneSets)
 export(plotEnrichedUpset)
 export(plotEnrichment)
