--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,9 +24,9 @@ Encoding: UTF-8
 LazyData: false
 Depends:
     R (>= 3.5),
-    basejump (>= 0.11.1),
-    DESeqAnalysis (>= 0.2.0)
+    basejump (>= 0.11.1)
 Imports:
+    DESeqAnalysis (>= 0.2.0),
     acidplots (>= 0.2.7),
     bioverbs (>= 0.2.0),
     goalie (>= 0.2.19),
