--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,7 @@ Imports:
     utils
 Suggests:
     acidtest (>= 0.2.0),
+    BiocManager,
     BiocStyle,
     patrick (>= 0.0.1),
     rmarkdown (>= 1.14),
