Update dependencies and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,9 +44,12 @@ importFrom(DESeqAnalysis,DESeqAnalysis)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,SimpleList)
+importFrom(S4Vectors,head)
 importFrom(S4Vectors,lapply)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
+importFrom(S4Vectors,na.omit)
+importFrom(S4Vectors,tail)
 importFrom(SummarizedExperiment,"rowRanges<-")
 importFrom(SummarizedExperiment,rowRanges)
 importFrom(UpSetR,fromList)
@@ -57,6 +60,7 @@ importFrom(basejump,alphaThreshold)
 importFrom(basejump,as_tibble)
 importFrom(basejump,export)
 importFrom(basejump,initDir)
+importFrom(basejump,leftJoin)
 importFrom(basejump,makeNames)
 importFrom(basejump,markdownHeader)
 importFrom(basejump,matchArgsToDoCall)
@@ -80,7 +84,6 @@ importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
-importFrom(dplyr,left_join)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,select_if)
@@ -131,9 +134,6 @@ importFrom(rlang,":=")
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(sessioninfo,session_info)
-importFrom(stats,na.omit)
 importFrom(tibble,deframe)
 importFrom(utils,globalVariables)
-importFrom(utils,head)
-importFrom(utils,tail)
 importMethodsFrom(DESeqAnalysis,coerce)
