--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,15 +38,20 @@ importClassesFrom(DESeqAnalysis,DESeqAnalysis)
 importFrom(BiocGenerics,combine)
 importFrom(BiocParallel,bpparam)
 importFrom(DESeqAnalysis,DESeqAnalysis)
+importFrom(IRanges,SplitDataFrameList)
+importFrom(IRanges,unsplit)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,SimpleList)
+importFrom(S4Vectors,complete.cases)
 importFrom(S4Vectors,head)
 importFrom(S4Vectors,lapply)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,na.omit)
+importFrom(S4Vectors,split)
 importFrom(S4Vectors,tail)
+importFrom(S4Vectors,unique)
 importFrom(SummarizedExperiment,"rowRanges<-")
 importFrom(SummarizedExperiment,rowRanges)
 importFrom(UpSetR,fromList)
@@ -97,6 +102,7 @@ importFrom(goalie,bapply)
 importFrom(goalie,hasColnames)
 importFrom(goalie,hasLength)
 importFrom(goalie,hasNames)
+importFrom(goalie,hasNoDuplicates)
 importFrom(goalie,hasRownames)
 importFrom(goalie,hasRows)
 importFrom(goalie,isAFile)
