Complete removal of dplyr and rlang

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(basejump,makeNames)
 importFrom(basejump,markdownHeader)
 importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,matchHumanOrthologs)
+importFrom(basejump,selectIf)
 importFrom(basejump,showHeader)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,standardizeCall)
@@ -77,16 +78,6 @@ importFrom(bioverbs,plotEnrichedGeneSets)
 importFrom(bioverbs,plotEnrichedUpset)
 importFrom(bioverbs,plotGSEATable)
 importFrom(bioverbs,topTables)
-importFrom(dplyr,arrange)
-importFrom(dplyr,desc)
-importFrom(dplyr,distinct)
-importFrom(dplyr,everything)
-importFrom(dplyr,filter)
-importFrom(dplyr,group_by)
-importFrom(dplyr,pull)
-importFrom(dplyr,select)
-importFrom(dplyr,select_if)
-importFrom(dplyr,summarise)
 importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
 importFrom(fgsea,plotEnrichment)
@@ -127,11 +118,6 @@ importFrom(methods,setMethod)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
-importFrom(rlang,"!!!")
-importFrom(rlang,"!!")
-importFrom(rlang,":=")
-importFrom(rlang,sym)
-importFrom(rlang,syms)
 importFrom(sessioninfo,session_info)
 importFrom(utils,globalVariables)
 importMethodsFrom(DESeqAnalysis,coerce)
