--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(S4Vectors,lapply)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,na.omit)
+importFrom(S4Vectors,order)
 importFrom(S4Vectors,split)
 importFrom(S4Vectors,tail)
 importFrom(S4Vectors,unique)
