--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ importFrom(IRanges,SplitDataFrameList)
 importFrom(IRanges,unsplit)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
+importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
 importFrom(S4Vectors,complete.cases)
 importFrom(S4Vectors,head)
