Speed up internal code and add BiocParallel support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ exportMethods(show)
 exportMethods(topTables)
 importClassesFrom(DESeqAnalysis,DESeqAnalysis)
 importFrom(BiocGenerics,combine)
+importFrom(BiocParallel,bplapply)
 importFrom(DESeqAnalysis,DESeqAnalysis)
 importFrom(IRanges,SplitDataFrameList)
 importFrom(IRanges,unsplit)
