--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: pfgsea
 Title: Parameterized Fast GSEA
 Description: Perform parameterized gene set enrichment analysis on multiple
     differential expression contrasts.
-Version: 0.1.13
-Date: 2019-08-28
+Version: 0.1.14
+Date: 2019-09-11
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -24,26 +24,27 @@ Encoding: UTF-8
 LazyData: false
 Depends:
     R (>= 3.6),
-    basejump (>= 0.11.11)
+    basejump (>= 0.11.14)
 Imports:
-    DESeqAnalysis (>= 0.2.5),
+    DESeqAnalysis (>= 0.2.7),
     acidplots (>= 0.2.14),
-    bioverbs (>= 0.2.7),
-    goalie (>= 0.3.6),
+    bioverbs (>= 0.2.10),
+    goalie (>= 0.3.7),
     BiocGenerics (>= 0.30),
-    IRanges (>= 2.18),
+    BiocParallel (>= 1.18),
+    IRanges (>= 2.18.2),
     S4Vectors (>= 0.22),
     SummarizedExperiment (>= 1.14),
     fgsea (>= 1.10),
     UpSetR (>= 1.4),
     ggplot2 (>= 3.1),
-    knitr (>= 1.23),
+    knitr (>= 1.24),
     sessioninfo (>= 1.1),
     methods,
     utils
 Suggests:
-    acidroxygen (>= 0.1),
-    acidtest (>= 0.2.1),
+    acidroxygen (>= 0.1.2),
+    acidtest (>= 0.2.5),
     BiocStyle (>= 2.12),
     patrick (>= 0.0.1),
     rmarkdown (>= 1.15),
