Add BPPARAM support for `RankedList()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,9 @@ exportMethods(show)
 exportMethods(topTables)
 importClassesFrom(DESeqAnalysis,DESeqAnalysis)
 importFrom(BiocGenerics,combine)
+importFrom(BiocParallel,SerialParam)
 importFrom(BiocParallel,bplapply)
+importFrom(BiocParallel,bpparam)
 importFrom(DESeqAnalysis,DESeqAnalysis)
 importFrom(IRanges,SplitDataFrameList)
 importFrom(IRanges,unsplit)
