Import allAreAtomic check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ importFrom(fgsea,gmtPathways)
 importFrom(fgsea,plotEnrichment)
 importFrom(fgsea,plotGseaTable)
 importFrom(ggplot2,labs)
+importFrom(goalie,allAreAtomic)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,areSameLength)
 importFrom(goalie,assert)
