--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -83,8 +83,10 @@ Collate:
     'package.R'
     'params.R'
     'pfgsea.R'
+    'plotCounts-methods.R'
     'plotEnrichedGeneSets-methods.R'
     'plotEnrichedUpset-methods.R'
     'plotGSEATable-methods.R'
     'show-methods.R'
     'topTables-methods.R'
+    'updateObject-methods.R'
