--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,13 @@ export(enrichedGeneSets)
 export(export)
 export(pfgsea)
 export(pfgseaTestsURL)
+export(plotCounts)
 export(plotEnrichedGeneSets)
 export(plotEnrichedUpset)
 export(plotEnrichment)
 export(plotGSEATable)
 export(topTables)
+export(updateObject)
 exportClasses(FGSEAList)
 exportClasses(RankedList)
 exportMethods("collectionNames<-")
@@ -32,8 +34,10 @@ exportMethods(plotEnrichedUpset)
 exportMethods(plotGSEATable)
 exportMethods(show)
 exportMethods(topTables)
+exportMethods(updateObject)
 importClassesFrom(DESeqAnalysis,DESeqAnalysis)
 importFrom(BiocGenerics,combine)
+importFrom(BiocGenerics,updateObject)
 importFrom(BiocParallel,bplapply)
 importFrom(BiocParallel,bpparam)
 importFrom(DESeqAnalysis,DESeqAnalysis)
@@ -78,6 +82,7 @@ importFrom(bioverbs,collectionNames)
 importFrom(bioverbs,contrastNames)
 importFrom(bioverbs,enrichedGeneSets)
 importFrom(bioverbs,export)
+importFrom(bioverbs,plotCounts)
 importFrom(bioverbs,plotEnrichedGeneSets)
 importFrom(bioverbs,plotEnrichedUpset)
 importFrom(bioverbs,plotGSEATable)
