--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(plotCounts)
 export(plotEnrichedGeneSets)
 export(plotEnrichedUpset)
 export(plotEnrichment)
+export(plotGSEAHeatmap)
 export(plotGSEATable)
 export(topTables)
 export(updateObject)
@@ -29,6 +30,7 @@ exportMethods(contrastNames)
 exportMethods(convertToHuman)
 exportMethods(enrichedGeneSets)
 exportMethods(export)
+exportMethods(plotCounts)
 exportMethods(plotEnrichedGeneSets)
 exportMethods(plotEnrichedUpset)
 exportMethods(plotGSEATable)
