--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,28 +24,29 @@ Encoding: UTF-8
 LazyData: false
 Depends:
     R (>= 3.6),
-    basejump (>= 0.11.21)
+    basejump (>= 0.11.22)
 Imports:
     BiocGenerics (>= 0.32),
     BiocParallel (>= 1.20),
-    DESeqAnalysis (>= 0.2.10),
+    DESeqAnalysis (>= 0.2.12),
     IRanges (>= 2.20),
     S4Vectors (>= 0.24),
     SummarizedExperiment (>= 1.16),
     UpSetR (>= 1.4),
-    acidplots (>= 0.2.16),
-    bioverbs (>= 0.2.10),
+    acidplots (>= 0.2.19),
+    bioverbs (>= 0.2.11),
     fgsea (>= 1.12),
     ggplot2 (>= 3.2),
     goalie (>= 0.4),
     knitr (>= 1.25),
+    rlang (>= 0.4),
     sessioninfo (>= 1.1),
     methods,
     utils
 Suggests:
     BiocStyle (>= 2.14),
-    acidroxygen (>= 0.1.3),
-    acidtest (>= 0.2.7),
+    acidroxygen (>= 0.1.4),
+    acidtest (>= 0.2.8),
     patrick (>= 0.0.1),
     rmarkdown (>= 1.16),
     testthat (>= 2.3)
