--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(BiocGenerics,updateObject)
 importFrom(BiocParallel,bplapply)
 importFrom(BiocParallel,bpparam)
 importFrom(DESeqAnalysis,DESeqAnalysis)
+importFrom(DESeqAnalysis,contrastSamples)
 importFrom(IRanges,SplitDataFrameList)
 importFrom(IRanges,unsplit)
 importFrom(S4Vectors,"mcols<-")
@@ -93,6 +94,8 @@ importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
 importFrom(fgsea,plotEnrichment)
 importFrom(fgsea,plotGseaTable)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,areDisjointSets)
@@ -130,6 +133,9 @@ importFrom(methods,setMethod)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
+importFrom(rlang,"!!")
+importFrom(rlang,sym)
 importFrom(sessioninfo,session_info)
 importFrom(utils,globalVariables)
 importMethodsFrom(DESeqAnalysis,coerce)
+importMethodsFrom(DESeqAnalysis,plotCounts)
