Draft update to plotting functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -86,8 +86,8 @@ Collate:
     'plotCounts-methods.R'
     'plotEnrichedGeneSets-methods.R'
     'plotEnrichedUpset-methods.R'
-    'plotGSEAHeatmap-methods.R'
     'plotGSEATable-methods.R'
+    'plotHeatmap-methods.R'
     'show-methods.R'
     'topTables-methods.R'
     'updateObject-methods.R'
