--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,8 @@ export(plotCounts)
 export(plotEnrichedGeneSets)
 export(plotEnrichedUpset)
 export(plotEnrichment)
-export(plotGSEAHeatmap)
 export(plotGSEATable)
+export(plotHeatmap)
 export(topTables)
 export(updateObject)
 exportClasses(FGSEAList)
@@ -34,6 +34,7 @@ exportMethods(plotCounts)
 exportMethods(plotEnrichedGeneSets)
 exportMethods(plotEnrichedUpset)
 exportMethods(plotGSEATable)
+exportMethods(plotHeatmap)
 exportMethods(show)
 exportMethods(topTables)
 exportMethods(updateObject)
@@ -89,6 +90,7 @@ importFrom(bioverbs,plotCounts)
 importFrom(bioverbs,plotEnrichedGeneSets)
 importFrom(bioverbs,plotEnrichedUpset)
 importFrom(bioverbs,plotGSEATable)
+importFrom(bioverbs,plotHeatmap)
 importFrom(bioverbs,topTables)
 importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
