--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,10 +76,9 @@ Collate:
     'deprecated.R'
     'enrichedGeneSets-methods.R'
     'export-methods.R'
-    'filterResults-internal.R'
     'globals.R'
-    'headtail-internal.R'
     'imports.R'
+    'internal.R'
     'package.R'
     'params.R'
     'pfgsea.R'
