Prepare new release

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,6 @@ exportMethods(export)
 exportMethods(plotCounts)
 exportMethods(plotEnrichedGeneSets)
 exportMethods(plotEnrichedUpset)
-exportMethods(plotGSEATable)
 exportMethods(plotHeatmap)
 exportMethods(show)
 exportMethods(topTables)
@@ -65,7 +64,7 @@ importFrom(SummarizedExperiment,"rowRanges<-")
 importFrom(SummarizedExperiment,rowRanges)
 importFrom(UpSetR,fromList)
 importFrom(acidplots,acid_theme_light)
-importFrom(acidplots,upset)
+importFrom(acidplots,plotUpset)
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,alphaThreshold)
 importFrom(basejump,as_tibble)
@@ -89,7 +88,6 @@ importFrom(bioverbs,export)
 importFrom(bioverbs,plotCounts)
 importFrom(bioverbs,plotEnrichedGeneSets)
 importFrom(bioverbs,plotEnrichedUpset)
-importFrom(bioverbs,plotGSEATable)
 importFrom(bioverbs,plotHeatmap)
 importFrom(bioverbs,topTables)
 importFrom(fgsea,fgsea)
