--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,9 +69,11 @@ importFrom(basejump,Gene2Symbol)
 importFrom(basejump,alphaThreshold)
 importFrom(basejump,as_tibble)
 importFrom(basejump,export)
+importFrom(basejump,import)
 importFrom(basejump,initDir)
 importFrom(basejump,leftJoin)
 importFrom(basejump,makeNames)
+importFrom(basejump,mapGenesToRownames)
 importFrom(basejump,markdownHeader)
 importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,matchHumanOrthologs)
