--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,17 @@ importFrom(S4Vectors,unique)
 importFrom(SummarizedExperiment,"rowRanges<-")
 importFrom(SummarizedExperiment,rowRanges)
 importFrom(UpSetR,fromList)
+importFrom(acidgenerics,"collectionNames<-")
+importFrom(acidgenerics,"contrastNames<-")
+importFrom(acidgenerics,collectionNames)
+importFrom(acidgenerics,contrastNames)
+importFrom(acidgenerics,enrichedGeneSets)
+importFrom(acidgenerics,export)
+importFrom(acidgenerics,plotCounts)
+importFrom(acidgenerics,plotEnrichedGeneSets)
+importFrom(acidgenerics,plotEnrichedUpset)
+importFrom(acidgenerics,plotHeatmap)
+importFrom(acidgenerics,topTables)
 importFrom(acidplots,acid_theme_light)
 importFrom(acidplots,plotUpset)
 importFrom(basejump,Gene2Symbol)
@@ -81,17 +92,6 @@ importFrom(basejump,selectIf)
 importFrom(basejump,showHeader)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,standardizeCall)
-importFrom(bioverbs,"collectionNames<-")
-importFrom(bioverbs,"contrastNames<-")
-importFrom(bioverbs,collectionNames)
-importFrom(bioverbs,contrastNames)
-importFrom(bioverbs,enrichedGeneSets)
-importFrom(bioverbs,export)
-importFrom(bioverbs,plotCounts)
-importFrom(bioverbs,plotEnrichedGeneSets)
-importFrom(bioverbs,plotEnrichedUpset)
-importFrom(bioverbs,plotHeatmap)
-importFrom(bioverbs,topTables)
 importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
 importFrom(fgsea,plotEnrichment)
