--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,8 @@ importFrom(basejump,selectIf)
 importFrom(basejump,showHeader)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,standardizeCall)
+importFrom(cli,cli_alert)
+importFrom(cli,cli_alert_warning)
 importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
 importFrom(fgsea,plotEnrichment)
