--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ importFrom(basejump,showHeader)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,standardizeCall)
 importFrom(cli,cli_alert)
+importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_warning)
 importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
