--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,9 @@ importFrom(basejump,standardizeCall)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_dl)
+importFrom(cli,cli_text)
+importFrom(cli,cli_ul)
 importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
 importFrom(fgsea,plotEnrichment)
