--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(BiocGenerics,updateObject)
 importFrom(BiocParallel,bplapply)
 importFrom(BiocParallel,bpparam)
 importFrom(DESeqAnalysis,DESeqAnalysis)
+importFrom(DESeqAnalysis,contrastName)
 importFrom(DESeqAnalysis,contrastSamples)
 importFrom(IRanges,SplitDataFrameList)
 importFrom(IRanges,unsplit)
